--- a/app/elements/editdelete-cheques-itemcard/editdelete-cheques-itemcard.html
+++ b/app/elements/editdelete-cheques-itemcard/editdelete-cheques-itemcard.html
@@ -42,7 +42,7 @@
       },
       FnEditcheque:function(e){
         this.$.editdeletecheque.toggle();
-        this.$.processingservice.editchequeService(this.enrno,this.chequeno,this.bankname,this.chequedate,this.installmentamount,this.paiddate);
+        this.$.processingservice.editchequeService(this.enrno,this.chequeno,this.bankname,this.chequedate,this.installmentamount,this.paiddate,this.installmenttype);
       },
       FnDeletecheque:function(e){
         this.$.editdeletecheque.toggle();
