--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -240,3 +240,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="general-icon-datepicker/general-icon-datepicker.html">
 <link rel="import" href="pdc-icon-fromdatepicker/pdc-icon-fromdatepicker.html">
 <link rel="import" href="datepicker-icon-card/datepicker-icon-card.html">
+<link rel="import" href="custompattern-fee-card/custompattern-fee-card.html">
+<link rel="import" href="custompattern-fee-service/custompattern-fee-service.html">
+<link rel="import" href="custompattern-installment-card/custompattern-installment-card.html">
+<link rel="import" href="custompattern-installment-card/custompattern-installment-card.html">
+<link rel="import" href="custom-fee-service/custom-fee-service.html">
+<link rel="import" href="login-card/login-card.html">
+<link rel="import" href="login-card/login-card.html">
