--- a/app/elements/feereceipt-card/feereceipt-card.html
+++ b/app/elements/feereceipt-card/feereceipt-card.html
@@ -45,7 +45,7 @@
       </table>
       <hr></hr>
       <table id="table" hidden$="{{hidecashparticular}}">
-        <tr style="text-align: center;"><th colspan="1" style="text-align: left;">Sl.No</th><th colspan="1" style="text-align: left;">Particulars</th><th style="text-align: left;">Splitup</th><th colspan="3" style="text-align: center;">Amount</th></tr>
+        <tr style="text-align: center;"><th colspan="1" style="text-align: left;">Sl.No</th><th colspan="1" style="text-align: left;">Particulars</th><th style="text-align: left;" hidden$="{{hidesplit}}">Splitup</th><th colspan="3" style="text-align: center;">Amount</th></tr>
       </table>
       <hr hidden$="{{hidecashparticular}}"></hr>
       <table  id="table" hidden$="{{hidecashparticular}}">
@@ -61,7 +61,7 @@
       
       </table>
        <table id="table" hidden$="{{hidechequeparticular}}">       
-        <tr style="text-align: center;"><th colspan="2" style="text-align: left;">Sl.No</th><th colspan="1" style="text-align: center;">Particulars</th><th colspan="3" width="110px" style="text-align: center;">Splitup</th><th colspan="2" style="text-align: left;margin-left: 80px;">Bank Name</th><th colspan="1" style="text-align: center;">Cheque No</th><th colspan="1" style="text-align: left;">Cheque Date</th><th colspan="2" style="text-align: left;">Amount</th></tr>
+        <tr style="text-align: center;"><th colspan="2" style="text-align: left;">Sl.No</th><th colspan="1" style="text-align: center;">Particulars</th><th colspan="3" width="110px" style="text-align: center;" hidden$="{{hidesplit}}">Splitup</th><th colspan="2" style="text-align: left;margin-left: 80px;">Bank Name</th><th colspan="1" style="text-align: center;">Cheque No</th><th colspan="1" style="text-align: left;">Cheque Date</th><th colspan="2" style="text-align: left;">Amount</th></tr>
       </table>      
       <hr hidden$="{{hidechequeparticular}}"></hr>
       <table id="table" hidden$="{{hidechequeparticular}}">
@@ -80,7 +80,7 @@
       </table>
        <table id="table" hidden$="{{hidetransferparticular}}">
 
-        <tr style="text-align: center;"><th colspan="2" style="text-align: left;">Sl.No</th><th colspan="1" style="text-align: center;">Particulars</th><th colspan="3" width="110px" style="text-align: center;">Splitup</th><th colspan="2" style="text-align: left;margin-left: 80px;">Bank Name</th><th colspan="1" style="text-align: center;">Cheque No</th><th colspan="1" style="text-align: left;">Cheque Date</th><th colspan="2" style="text-align: left;">Amount</th></tr>
+        <tr style="text-align: center;"><th colspan="2" style="text-align: left;">Sl.No</th><th colspan="1" style="text-align: center;">Particulars</th><th colspan="3" width="110px" style="text-align: center;" hidden$="{{hidesplit}}">Splitup</th><th colspan="2" style="text-align: left;margin-left: 80px;">Bank Name</th><th colspan="1" style="text-align: center;">Cheque No</th><th colspan="1" style="text-align: left;">Cheque Date</th><th colspan="2" style="text-align: left;">Amount</th></tr>
       
       </table>
       <hr hidden$="{{hidetransferparticular}}"></hr>
