discount card refresh

--- a/app/elements/attachdiscount-card/attachdiscount-card.html
+++ b/app/elements/attachdiscount-card/attachdiscount-card.html
@@ -144,7 +144,7 @@
         this.value="";
         this.admissionno="";
         this.studentname="";
-        this.discountarr="";
+        // this.discountarr="";
         this.grade="";
         this.hidediscountmapcard=true;
     },
