--- a/app/elements/attachdiscount-itemcard/attachdiscount-itemcard.html
+++ b/app/elements/attachdiscount-itemcard/attachdiscount-itemcard.html
@@ -46,6 +46,7 @@
       },
       FnRefresh:function(){
         discounttypeid="";
+        document.querySelector('#attachdiscounttype').selected=-1;
       }
     });
   })();
