--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -236,6 +236,11 @@
               <attachdiscount-card></attachdiscount-card>
             </div>
           </section>
+          <section data-category="adhoc-discount">
+            <div class="col-md-12">
+              <adhoc-discount></adhoc-discount>
+            </div>
+          </section>
           </iron-pages>
           </div>
           </div>
