--- a/app/elements/appregfee-service/appregfee-service.html
+++ b/app/elements/appregfee-service/appregfee-service.html
@@ -518,6 +518,7 @@
         document.querySelector('fees-card').autocompletearr(e.detail.response.returnval);
         document.querySelector('custompattern-fee-card').autocompletearr(e.detail.response.returnval);
         document.querySelector('attachdiscount-card').autocompletearr(e.detail.response.returnval);
+        document.querySelector('adhoc-discount').autocompletearr(e.detail.response.returnval);
       }
     });
   })();
