--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -247,3 +247,5 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="custom-fee-service/custom-fee-service.html">
 <link rel="import" href="login-card/login-card.html">
 <link rel="import" href="login-card/login-card.html">
+<link rel="import" href="adhoc-discount/adhoc-discount.html">
+<link rel="import" href="adhoc-discount-itemcard/adhoc-discount-itemcard.html">
