--- a/app/elements/navigation-bar/navigation-bar.html
+++ b/app/elements/navigation-bar/navigation-bar.html
@@ -428,6 +428,9 @@
            <li id="discounts">
             <a href="" aria-hidden="true" on-click="FnAddDiscount">Discounts</a>
            </li> 
+           <li id="discounts">
+            <a href="" aria-hidden="true" on-click="FnAdhocDiscount">Adhoc Discount</a>
+           </li> 
            <li id="searchreceipt">
             <a href="" aria-hidden="true" on-click="FnSearchReceipt">Search Receipt</a>
            </li> 
@@ -924,7 +927,12 @@
         document.querySelector('discount-type-ui-card').ready();
         document.querySelector('discount-display-card').ready();        
       },
-      
+      FnAdhocDiscount:function(){
+        document.querySelector('app-list').setPage("adhoc-discount","Adhoc Discount");
+        document.querySelector('adhoc-discount').callService();
+        document.querySelector('adhoc-discount').ready();
+        // document.querySelector('discount-display-card').ready();   
+      },      
        FnInstallment:function()
       {
 
