--- a/app/elements/processing-service/processing-service.html
+++ b/app/elements/processing-service/processing-service.html
@@ -182,6 +182,17 @@
         on-response="attachdiscountResponse"
         debounce-duration="300"
         >
+        
+        <iron-ajax
+        method="post"
+        id="updateadhocdiscountajax"
+        url="{{updateadhocdiscounturl}}"
+        params="{{updateadhocdiscountparam}}"
+        handle-as="json"
+        content-type="application/json"
+        on-response="updateadhocdiscountResponse"
+        debounce-duration="300"
+        >
   </template>
   <script>
   (function() {
@@ -862,6 +873,10 @@
         document.querySelector('attachdiscount-card').studentname=arr[0].student_name;
         document.querySelector('attachdiscount-card').grade=arr[0].class_for_admission;
         document.querySelector('attachdiscount-card').Fnhidediscountmapcard();
+        document.querySelector('adhoc-discount').admissionno=arr[0].admission_no;
+        document.querySelector('adhoc-discount').studentname=arr[0].student_name;
+        document.querySelector('adhoc-discount').grade=arr[0].class_for_admission;
+        document.querySelector('adhoc-discount').Fnhidediscountmapcard();
       },
       attachdiscountService:function(admissionno,discounttypeid){
         this.attachdiscounturl=sessionStorage.getItem("addrinfo")+"/attachdiscount-service";
@@ -876,6 +891,21 @@
         alert(e.detail.response.returnval);
         document.querySelector('attachdiscount-card').FnRefresh();
         document.querySelector('attachdiscount-itemcard').FnRefresh();
+      },
+      updateadhocdiscountService:function(admissionno,amount,feetype){
+        this.updateadhocdiscounturl=sessionStorage.getItem("addrinfo")+"/updateadhocdiscount-service";
+        var obj={"schoolid":""};
+        obj.schoolid=localStorage.getItem("schoolid");
+        obj.admissionno=admissionno;
+        obj.amount=amount;
+        obj.feetype=feetype;
+        this.updateadhocdiscountparam=obj;
+        this.$.updateadhocdiscountajax.generateRequest();
+      },
+      updateadhocdiscountResponse:function(e){
+        alert(e.detail.response.returnval);
+        document.querySelector('adhoc-discount').FnRefresh();
+        document.querySelector('adhoc-discount-itemcard').FnRefresh();
       }
     });
   })();
