--- a/app/elements/fees-service/fees-service.html
+++ b/app/elements/fees-service/fees-service.html
@@ -149,6 +149,7 @@
         obj.paidstatus=cash[i].paidstatus;   
         obj.feecashcount=feecashcount;
         obj.fineamount=0;  
+        obj.receiveddate=localStorage.getItem("curr_sess_date");
         obj.paymentthrough=localStorage.getItem("curr_sess_paymentthrough");
         obj.installmentpattern=localStorage.getItem("curr_sess_installmentpattern");   
         obj.createdby=localStorage.getItem("employeeid"); 
@@ -214,6 +215,7 @@
         obj.paidstatus=thirdparty[i].paidstatus;   
         obj.feethirdpartycount=feethirdpartycount;
         obj.fineamount=0;  
+        obj.receiveddate=localStorage.getItem("curr_sess_date");
         obj.paymentthrough=localStorage.getItem("curr_sess_paymentthrough");  
         obj.installmentpattern=localStorage.getItem("curr_sess_installmentpattern");
         obj.createdby=localStorage.getItem("employeeid"); 
@@ -282,14 +284,15 @@
         obj.discountamount=cheque[i].discountamount; 
         obj.waiveoffamount=cheque[i].waiveoff; 
         obj.modeofpayment=cheque[i].paymentmode; 
-        obj.receiveddate=cheque[i].receiveddate;       
+        // obj.receiveddate=cheque[i].receiveddate;       
         obj.paidstatus=cheque[i].paidstatus; 
         obj.chequeno=cheque[i].chequeno;        
         obj.bankname=cheque[i].bankname; 
         obj.chequedate=cheque[i].chequedate; 
         obj.chequestatus=cheque[i].chequestatus; 
         obj.feechequecount=feechequecount;
-        obj.fineamount=0; 
+        obj.fineamount=0;
+        obj.receiveddate=localStorage.getItem("curr_sess_date"); 
         obj.paymentthrough=localStorage.getItem("curr_sess_paymentthrough");
         obj.installmentpattern=localStorage.getItem("curr_sess_installmentpattern");  
         obj.createdby=localStorage.getItem("employeeid"); 
@@ -349,14 +352,15 @@
         obj.discountamount=transfer[i].discountamount; 
         obj.waiveoffamount=transfer[i].waiveoff; 
         obj.modeofpayment=transfer[i].paymentmode; 
-        obj.receiveddate=transfer[i].receiveddate; 
+        // obj.receiveddate=transfer[i].receiveddate; 
         obj.paiddate=transfer[i].paiddate; 
         obj.paidstatus=transfer[i].paidstatus; 
         obj.referenceno=transfer[i].referenceno;        
         obj.bankname=transfer[i].bankname; 
         obj.chequedate=transfer[i].chequedate;
         obj.feetransfercount=feetransfercount; 
-        obj.fineamount=0;         
+        obj.fineamount=0;
+        obj.receiveddate=localStorage.getItem("curr_sess_date");         
         obj.paymentthrough=localStorage.getItem("curr_sess_paymentthrough");
         obj.installmentpattern=localStorage.getItem("curr_sess_installmentpattern");
         obj.createdby=localStorage.getItem("employeeid"); 
