--- a/app/elements/custom-fee-service/custom-fee-service.html
+++ b/app/elements/custom-fee-service/custom-fee-service.html
@@ -145,7 +145,8 @@
         obj.paiddate=cash[i].paiddate; 
         obj.paidstatus=cash[i].paidstatus;   
         obj.feecashcount=feecashcount;
-        obj.fineamount=0;  
+        obj.fineamount=0; 
+        obj.receiveddate=localStorage.getItem("curr_sess_date"); 
         obj.paymentthrough=localStorage.getItem("curr_sess_paymentthrough");
         obj.installmentpattern=localStorage.getItem("curr_sess_installmentpattern");   
         obj.createdby=localStorage.getItem("employeeid"); 
@@ -214,7 +215,8 @@
         obj.paiddate=thirdparty[i].paiddate; 
         obj.paidstatus=thirdparty[i].paidstatus;   
         obj.feethirdpartycount=feethirdpartycount;
-        obj.fineamount=0;  
+        obj.fineamount=0;
+        obj.receiveddate=localStorage.getItem("curr_sess_date");  
         obj.paymentthrough=localStorage.getItem("curr_sess_paymentthrough");  
         obj.installmentpattern=localStorage.getItem("curr_sess_installmentpattern");
         obj.createdby=localStorage.getItem("employeeid"); 
@@ -281,6 +283,7 @@
         obj.chequestatus=cheque[i].chequestatus; 
         obj.feechequecount=feechequecount;
         obj.fineamount=0; 
+        obj.receiveddate=localStorage.getItem("curr_sess_date");
         obj.paymentthrough=localStorage.getItem("curr_sess_paymentthrough");
         obj.installmentpattern=localStorage.getItem("curr_sess_installmentpattern");  
         obj.createdby=localStorage.getItem("employeeid"); 
@@ -351,7 +354,8 @@
         obj.bankname=transfer[i].bankname; 
         obj.chequedate=transfer[i].chequedate;
         obj.feetransfercount=feetransfercount; 
-        obj.fineamount=0;         
+        obj.fineamount=0; 
+        obj.receiveddate=localStorage.getItem("curr_sess_date");        
         obj.paymentthrough=localStorage.getItem("curr_sess_paymentthrough");
         obj.installmentpattern=localStorage.getItem("curr_sess_installmentpattern");
         obj.createdby=localStorage.getItem("employeeid"); 
