discount after one payment and duplicate removed second time insertion

--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -249,3 +249,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="login-card/login-card.html">
 <link rel="import" href="adhoc-discount/adhoc-discount.html">
 <link rel="import" href="adhoc-discount-itemcard/adhoc-discount-itemcard.html">
+<link rel="import" href="installment-pattern-change/installment-pattern-change.html">
