admission status and receipt refresh

--- a/app/elements/admission-service/admission-service.html
+++ b/app/elements/admission-service/admission-service.html
@@ -1170,6 +1170,7 @@ insertstudenthistoryResponse:function(e){
         document.querySelector('fees-card').studentname=arr[0].student_name;
         document.querySelector('fees-card').parentname=arr[0].father_name;
         document.querySelector('fees-card').dob=arr[0].dob;
+        localStorage.setItem("curr_sess_admissionstatus",arr[0].admission_status);
         localStorage.setItem("curr_sess_admissiontype",arr[0].admission_type);
         localStorage.setItem("curr_sess_discounttype",arr[0].discount_type);
         localStorage.setItem("curr_sess_referralid",arr[0].referral_type);
